# MathScout

./: .env.example  .env.postgres.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.template/_import_template/: G7A_示例册.json  README.md
.template/beishida_math_json_v3_with_template/: G7A_七年级上册.json  G7B_七年级下册.json  G8A_八年级上册.json  G8B_八年级下册.json  G9A_九年级上册.json  G9B_九年级下册.json  manifest.json  北师大初中数学_JSON更新模板与维护说明.docx
docs/: agent-runtime.md  ai-control-plane.md  architecture.md  crawl-policy.md  data-model.md  development-roadmap.md  development-status.md  first-version-pipeline.md  ingestion.md  knowledge-graph-redesign.md  local-config.md  source-notes.md
mathscout/: __init__.py  cli.py  config.py  main.py  review.py  runtime.py  worker.py
mathscout/admin/: __init__.py  routes.py
mathscout/agents/: __init__.py  base.py  control_plane.py  orchestrator.py  source_discovery.py
mathscout/ai/: openai_compatible.py
mathscout/api/: routes.py
mathscout/crawler/: __init__.py  fetchers.py  registry.py  robots.py
mathscout/db/: init_db.py  migrations.py  models.py  session.py
mathscout/extraction/: __init__.py  ai_knowledge_extractor.py  ai_method_extractor.py  ai_problem_extractor.py  problem_rule_based.py  prompts.md  rule_based.py  schemas.py
mathscout/importers/: __init__.py  template.py
mathscout/orchestration/: __init__.py  schemas.py
mathscout/parsers/: attachments.py  convert.py  detect.py  html.py  pdf.py
mathscout/pipeline/: crawl.py  extract.py  jobs.py  knowledge_extract.py  problem_extract.py
scripts/: import_template.py
tests/: test_admin_navigation.py  test_ai_problem_extractor.py  test_convert.py  test_crawl_failures_and_review.py  test_detect.py  test_extract_layers.py  test_extract_mapping.py  test_job_runtime_components.py  test_knowledge_extract.py  test_migrations.py  test_multi_agent_control_plane.py  test_phase_b_schema.py  test_problem_admin.py  test_problem_reconcile.py  test_problem_rule_based.py  test_review_edit.py  test_review_service.py  test_robots.py  test_runtime_observations.py  test_schema_migrations.py  test_source_discovery.py  test_template_shape.py  test_time_display.py
(+16 files in other folders)
