[project]
name = "mathscout"
version = "0.1.0"
description = "初中数学教研资料爬取与教学知识抽取应用。"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
  "beautifulsoup4>=4.12",
  "fastapi>=0.115",
  "scrapling[fetchers]>=0.4",
  "jinja2>=3.1",
  "markitdown[docx,pptx,xlsx]>=0.1",
  "orjson>=3.10",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "pymupdf>=1.24",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0",
  "trafilatura>=1.9",
  "uvicorn[standard]>=0.30"
]

# 规划中（尚未接入运行流程）的可选依赖，待对应功能落地后再启用：
#   alembic（Postgres 迁移）、psycopg + pgvector（Postgres / 向量检索）、
#   playwright（登录态/JS 页面抓取）。需要时按需加入 optional-dependencies。

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.2",
  "ruff>=0.5"
]
# 扫描版 PDF / 图片的 OCR：经 markitdown 调用 Azure 文档智能。
# 需配置 AZURE_DOC_INTEL_ENDPOINT（及可选 AZURE_DOC_INTEL_KEY）。
ocr = [
  "markitdown[az-doc-intel]>=0.1"
]

[project.scripts]
mathscout = "mathscout.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
